--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,8 @@
               }
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/lightgallery/css/lightgallery.css"
             ],
             "scripts": [],
             "server": "src/main.server.ts",
