--- a/angular.json
+++ b/angular.json
@@ -35,12 +35,7 @@
               "src/styles.scss",
               "node_modules/lightgallery/css/lightgallery.css"
             ],
-            "scripts": [],
-            "server": "src/main.server.ts",
-            "prerender": true,
-            "ssr": {
-              "entry": "server.ts"
-            }
+            "scripts": []
           },
           "configurations": {
             "production": {
