--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,6 +1,11 @@
 RewriteEngine On
 RewriteBase /
 
+# Redirect to https and www site
+RewriteCond %{HTTPS} off [OR]
+RewriteCond %{HTTP_HOST} !^www\. [NC]
+RewriteRule (.*) https://www.%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
 # Redirect all requests to index.html
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
